# energysim

./: .gitignore  CHANGELOG.txt  FEATURES IN NEXT VERSION.txt  README.md  README.rst  mkdocs.yml  pyproject.toml  setup.py  test_energysim.py
.github/: copilot-instructions.md
docs/: add-simulator.md  architecture.md  external-simulators.md  faq.md  features.md  index.md
docs/source/: add_simulator.rst  architecture.rst  conf.py  energysim_features.rst  external_simulator.py  index.rst  index.rst~  working_external_sims.rst
energysim/: __init__.py  csAdapter.py  csv_adapter.py  external_simulator.py  meAdapter.py  ppAdapter.py  pyScriptAdapter.py  pypsaAdapter.py  signalAdapter.py  utils.py
energysim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/Optimal Dispatch of FER/: Flexibledemand.csv  Hydrogen.ptg_modelB_case2.fmu  Load_P.csv  Optimal dispatch of flexible energy resources using energysim.docx  P2H.pth_modelB_case2.fmu  cost.csv  data.csv  data.xlsx  es_res.h5  gridModel_case2.p  heat_prod.csv  hydrogen_prod.csv
examples/community_microgrid/: README.md  analyze_forecasts.py  community_grid.p  forecast_log.json  generate_data.py  run_community.py  weather.csv
examples/matlab_cosim/: README.md  matlab_cosim_dashboard.html  run_matlab_cosim.py  weather.csv
examples/microgrid/: README.md  generate_data.py  microgrid.p  microgrid_cosim.ipynb  microgrid_dashboard.html  run_microgrid.py  weather_data.csv
examples/ml_grid/: README.md  distribution_grid.p  features.csv  (+5 more)
res/: res_community_battery.csv  res_dispatcher.csv
src/: setup.py
(+64 files in other folders)
