[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "energysim"
version = "2.1.9.1"
description = "Python package for cosimulation of multi-energy systems"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.8"
authors = [
    { name = "Digvijay Gusain", email = "digvijay.gusain29@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy",
    "pandas",
    "tqdm",
    "tables",
    "networkx",
]

[project.optional-dependencies]
fmu = ["fmpy>=0.3"]
powerflow = ["pandapower"]
pypsa = ["pypsa"]
plotting = ["matplotlib"]
all = ["fmpy>=0.3", "pandapower", "pypsa", "matplotlib"]
docs = ["mkdocs-material", "mkdocs-material-extensions"]

[project.urls]
Homepage = "https://github.com/dgusain1/energysim"
Documentation = "https://energysim.readthedocs.io"
Repository = "https://github.com/dgusain1/energysim"
Issues = "https://github.com/dgusain1/energysim/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/energysim"]

[dependency-groups]
dev = [
    "pytest",
    "mkdocs-material",
    "mkdocs-material-extensions",
]
